--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>TP Final Simulación</title>
-    <link href="bower_components//bootstrap/dist/css/bootstrap.css" rel="stylesheet">
+    <link href="node_modules/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
     <link href="src/style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
-    <link href="bower_components/rangeslider.js/dist/rangeslider.css" rel="stylesheet">
+    <link href="node_modules/rangeslider.js/dist/rangeslider.css" rel="stylesheet">
 
 </head>
 
 <body>
     <script src="node_modules/jquery/dist/jquery.js"></script>
-    <script src="bower_components/plotlyjs/plotly.js"></script>
-    <script src="bower_components/rangeslider.js/dist/rangeslider.js"></script>
+    <script src=""></script>
+    <script src="node_modules/rangeslider.js/dist/rangeslider.js"></script>
     <!-- <script>
         function showConsole(value) {
             console.log(value);
