--- a/index.html
+++ b/index.html
@@ -8,15 +8,19 @@
     <link href="src/style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
     <link href="node_modules/rangeslider.js/dist/rangeslider.css" rel="stylesheet">
+    <link href="node_modules/dygraphs/dist/dygraph.css" rel="stylesheet" type="text/css">
 
 </head>
 
 <body>
     <script src="node_modules/jquery/dist/jquery.js"></script>
-    <script src=""></script>
     <script src="node_modules/rangeslider.js/dist/rangeslider.js"></script>
-    <!-- <script src="node_modules/d3/dist/d3.js"></script> -->
-    <script src="https://d3js.org/d3.v4.min.js"></script>
+    <script src="src/rangeslider-script.js"></script>
+    <script src="node_modules/d3/dist/d3.js"></script>
+    <script src="node_modules/dygraphs/dist/dygraph.js"></script>
+
+
+    <!-- <script src="https://d3js.org/d3.v4.min.js"></script> -->
     <!-- <script>
         function showConsole(value) {
             console.log(value);
@@ -110,73 +114,16 @@
                     </div>
                 </div>
             </div>
-            <div class="col800 col-8" id="myDiv">
-                <svg width="960" height="500"></svg>
+            <div class="col800 col-8" id="graph">
+                <!-- <svg width="960" height="500"></svg> -->
             </div>
+            <!-- <div id="graph"></div> -->
         </div>
 
     </section>
 
-
-
-
+    <script src="src/graphic.js"></script>
     <script>
-        $(function () {
-            var $document = $(document);
-            var selector = '[data-rangeslider]';
-            var $element = $(selector);
-            // For ie8 support
-            var textContent = ('textContent' in document) ? 'textContent' : 'value';
-
-            function valueOutput(element) {
-                var value = element.value;
-                var output = element.parentNode.getElementsByClassName('output')[0] || element.parentNode.parentNode.getElementsByClassName('output')[0];
-                output.value = value;
-            }
-
-            $('.cambiar').on('change', function (item) {
-                var range1 = item.currentTarget.parentElement.parentElement.children[0].children[0];
-                var $inputRange = $(range1);
-                var value = item.currentTarget.value;
-                $inputRange.val(value).change();
-            })
-
-            // $document.on('change', '#cantMeses input', function (e) {
-            //     var $inputRange = $(selector, e.target.parentNode);
-            //     var value = $('input[type="number"]', e.target.parentNode)[0].value;
-            //     console.log(value);
-            //     $inputRange.val(value).change();
-            // });
-
-
-            // Basic rangeslider initialization
-            $element.rangeslider({
-                // Deactivate the feature detection
-                polyfill: false,
-                rangeClass: 'rangeslider-1',
-                disabledClass: 'rangeslider--disabled-1',
-                horizontalClass: 'rangeslider--horizontal-1',
-                verticalClass: 'rangeslider--vertical-1',
-                fillClass: 'rangeslider__fill-1',
-                handleClass: 'rangeslider__handle-1',
-
-                // Callback function
-                onInit: function () {
-                    valueOutput(this.$element[0]);
-                },
-                // Callback function
-                onSlide: function (position, value) {
-                    console.log('onSlide');
-                    console.log('position: ' + position, 'value: ' + value);
-                    valueOutput(this.$element[0]);
-                },
-                // Callback function
-                onSlideEnd: function (position, value) {
-                    console.log('onSlideEnd');
-                    console.log('position: ' + position, 'value: ' + value);
-                }
-            });
-        });
 
 
 
