--- a/index.html
+++ b/index.html
@@ -79,20 +79,20 @@
                     <div class="col-6 offset-1">
                         <h2 class="alt-title">Alternativas</h2>
                         <p>
-                            <input type="checkbox" checked="checked" class="checkbox">
-                            <label>Dólares</label>
+                            <input type="checkbox" checked="checked" class="checkbox" id="0" onclick="(new calcular()).change(this)">
+                            <label for="0" >Dólares</label>
                         </p>
                         <p>
-                            <input type="checkbox" class="checkbox " checked="checked">
-                            <label>LEBAC</label>
+                            <input type="checkbox" class="checkbox " checked="checked" id="1" onclick="calcular().change(this)" >
+                            <label for="1">LEBAC</label>
                         </p>
                         <p>
-                            <input type="checkbox" class="checkbox " checked="checked">
-                            <label>Fondos de Inversión</label>
+                            <input type="checkbox" class="checkbox " checked="checked" id="2" onclick="p.change(this)">
+                            <label for="2">Fondos de Inversión</label>
                         </p>
                         <p>
-                            <input type="checkbox" class="checkbox " checked="checked">
-                            <label>Plazo Fijo</label>
+                            <input type="checkbox" class="checkbox " checked="checked" id="3" onclick="calcular(this)">
+                            <label for="3">Plazo Fijo</label>
                         </p>
 
                     </div>
@@ -100,7 +100,7 @@
                 <div class="row">
                     <div class="col-4 offset-2">
                         <p>
-                            <button class="btn-primary btn-mati">Calcular</button>
+                            <button class="btn-primary btn-mati" onclick="calcular(this)">Calcular</button>
                         </p>
 
                     </div>
@@ -110,11 +110,11 @@
                         <p>
                             <button class="btn-primary btn-mati">Crisis!</button>
                         </p>
-
+                        <p>g.visibility() = <span id="visibility"></span></p>
                     </div>
                 </div>
             </div>
-            <div class="col800 col-8" id="graph">
+            <div class="col800 col-7" id="graph">
                 <!-- <svg width="960" height="500"></svg> -->
             </div>
             <!-- <div id="graph"></div> -->
