--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                             <input type="range" min="1000" max="1000000" value="50000" step="1000" data-rangeslider>
                         </div>
                         <div class="col-4">
-                            <input type="number" id="" class="form-control output cambiar">
+                            <input type="number" id="monto" class="form-control output cambiar">
                         </div>
                     </div>
                 </div>
@@ -69,7 +69,7 @@
                             <input type="range" class="" min="1" max="120" value="12" data-rangeslider>
                         </div>
                         <div class="col-4">
-                            <input type="number" id="" class="form-control output cambiar">
+                            <input type="number" id="meses" class="form-control output cambiar" onchange="calcular2()">
                         </div>
                     </div>
                 </div>
@@ -80,10 +80,10 @@
                         <h2 class="alt-title">Alternativas</h2>
                         <p>
                             <input type="checkbox" checked="checked" class="checkbox" id="0" onclick="(new calcular()).change(this)">
-                            <label for="0" >Dólares</label>
+                            <label for="0">Dólares</label>
                         </p>
                         <p>
-                            <input type="checkbox" class="checkbox " checked="checked" id="1" onclick="calcular().change(this)" >
+                            <input type="checkbox" class="checkbox " checked="checked" id="1" onclick="calcular().change(this)">
                             <label for="1">LEBAC</label>
                         </p>
                         <p>
@@ -100,7 +100,7 @@
                 <div class="row">
                     <div class="col-4 offset-2">
                         <p>
-                            <button class="btn-primary btn-mati" onclick="calcular(this)">Calcular</button>
+                            <button class="btn-primary btn-mati" onclick="calcular2(this)">Calcular</button>
                         </p>
 
                     </div>
@@ -110,7 +110,9 @@
                         <p>
                             <button class="btn-primary btn-mati">Crisis!</button>
                         </p>
-                        <p>g.visibility() = <span id="visibility"></span></p>
+                        <p>g.visibility() =
+                            <span id="visibility"></span>
+                        </p>
                     </div>
                 </div>
             </div>
@@ -125,21 +127,39 @@
     <script src="src/graphic.js"></script>
     <script>
 
-
-
-
-        $.ajax({
-            //async: false,
-            url: "http://localhost:3000/datos1",
-            type: "get",
-            contentType: "application/json; charset=utf-8",
-            datatype: "json",
-            success: function (result) {
-                //console.log(result);
-                // load(result);
+        function getFormatedData(dataArray) {
+            var dolarHoy = dataArray[0].valor;
+            var inversionHoy = $('#monto').val()/dolarHoy;
+            console.log(inversionHoy);
+            var r = "fecha,valor\n";
+            // for (var i = 0; i < dataArray.length; i++) {
+                for (var i = 0; i < $('#meses').val()*30; i++) {
+                r += dataArray[i].fecha;
+                r += "," + inversionHoy*dataArray[i].valor;
+                r += "\n";
             }
+            return r;
+        }
 
-        });   
+
+        function calcular2() {
+            $.ajax({
+                //async: false,
+                url: "http://localhost:3000/calcular",
+                type: "get",
+                contentType: "application/json; charset=utf-8",
+                datatype: "json",
+                success: function (result) {
+                    console.log(result);
+                    var enviar = getFormatedData(result);
+                    calcular(enviar);
+                    // load(result);
+                }
+
+            });
+
+        }
+
     </script>
 </body>
 
