--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                             <input type="range" min="1000" max="1000000" value="50000" step="1000" data-rangeslider>
                         </div>
                         <div class="col-4">
-                            <input type="number" id="monto" class="form-control output cambiar">
+                            <input type="number" id="monto" class="form-control output cambiar" onchange="calcular2()">
                         </div>
                     </div>
                 </div>
@@ -79,19 +79,19 @@
                     <div class="col-6 offset-1">
                         <h2 class="alt-title">Alternativas</h2>
                         <p>
-                            <input type="checkbox" checked="checked" class="checkbox" id="0" onclick="">
+                            <input type="checkbox" checked="checked" class="checkbox check1" id="0" onclick="changeStatus(this)">
                             <label for="0">Dólares</label>
                         </p>
                         <p>
-                            <input type="checkbox" class="checkbox " checked="checked" id="1" onclick="">
+                            <input type="checkbox" class="checkbox " checked="checked" id="1" onclick="changeStatus(this)">
                             <label for="1">LEBAC</label>
                         </p>
                         <p>
-                            <input type="checkbox" class="checkbox " checked="checked" id="2" onclick="">
+                            <input type="checkbox" class="checkbox " checked="checked" id="2" onclick="changeStatus(this)">
                             <label for="2">Fondos de Inversión</label>
                         </p>
                         <p>
-                            <input type="checkbox" class="checkbox " checked="checked" id="3" onclick="">
+                            <input type="checkbox" class="checkbox " checked="checked" id="3" onclick="changeStatus(this)">
                             <label for="3">Plazo Fijo</label>
                         </p>
 
@@ -160,8 +160,9 @@
 
     </section>
 
-    <script src="src/graphic.js"></script>
+
     <script>
+
 
         $("table").hide();
 
@@ -193,10 +194,11 @@
                     var enviar = getFormatedData(result);
                     // console.log(enviar);
                     var inversionTotal = enviar.split(",").pop();
-                    inversionTotal = Math.round(inversionTotal*100)/100;
+                    inversionTotal = Math.round(inversionTotal * 100) / 100;
                     // var inversionTotal = (result[(($('#meses').val() * 30) - 1)].valor);
-                    console.log(inversionTotal);
-                    loadTable(inversionTotal);
+                    // console.log(inversionTotal);
+                    // loadTable(inversionTotal);
+                    getInversionTotal(inversionTotal);
                     calcular(enviar);
                     // load(result);
                 }
@@ -205,15 +207,25 @@
 
         }
 
+
         function loadTable(inversionTotal) {
             $("table").show();
-            $('#dolarcap').html("$" + inversionTotal);
-            var ganancia = inversionTotal-$('#monto').val();
-            ganancia = Math.round(ganancia*100)/100;
-            $('#dolargan').html("$" + ganancia);
+            var ganancia = inversionTotal - $('#monto').val();
+            ganancia = Math.round(ganancia * 100) / 100;
+            if ($('#0').is(":checked")) {
+                $('#dolarcap').html("$" + inversionTotal);
+                $('#dolargan').html("$" + ganancia);
+            } else {
+                $('#dolarcap').html("N/A");
+                $('#dolargan').html("N/A");
+            }
+
+
+
         }
 
     </script>
+    <script src="src/graphic.js"></script>
 </body>
 
 </html>
