--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     </div>
                     <div class="row">
                         <div class="col-4 offset-1">
-                            <input type="range" min="1000" max="1000000" value="50000" step="1000" data-rangeslider>
+                            <input type="range" min="100" max="100000" value="10000" step="100" data-rangeslider>
                         </div>
                         <div class="col-4">
                             <input type="number" id="monto" class="form-control output cambiar" onchange="calcular2()">
@@ -66,7 +66,7 @@
                     </div>
                     <div class="row">
                         <div class="col-4 offset-1">
-                            <input type="range" class="" min="1" max="120" value="12" data-rangeslider>
+                            <input type="range" class="" min="1" max="12" value="3" data-rangeslider>
                         </div>
                         <div class="col-4">
                             <input type="number" id="meses" class="form-control output cambiar" onchange="calcular2()">
@@ -108,7 +108,7 @@
                 <div class="row">
                     <div class="col-4 offset-2">
                         <p>
-                            <button class="btn-primary btn-mati">Crisis!</button>
+                            <!--button class="btn-primary btn-mati">Crisis!</button-->
                         </p>
                         <p>g.visibility() =
                             <span id="visibility"></span>
@@ -136,18 +136,18 @@
                                 </tr>
                                 <tr>
                                     <th scope="row">LEBAC</th>
-                                    <td>Jacob</td>
-                                    <td>Thornton</td>
+                                    <td></td>
+                                    <td></td>
                                 </tr>
                                 <tr>
                                     <th scope="row">Fondos de Inversión</th>
-                                    <td>Larry</td>
-                                    <td>the Bird</td>
+                                    <td></td>
+                                    <td></td>
                                 </tr>
                                 <tr>
                                     <th scope="row">Plazo Fijo</th>
-                                    <td>Larry</td>
-                                    <td>the Bird</td>
+                                    <td></td>
+                                    <td></td>
                                 </tr>
                             </tbody>
                         </table>
