--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
         function calcular2() {
             $.ajax({
 
-                url: "http://127.0.0.1:3000/calcular",
+                url: "http://ec2-54-190-28-189.us-west-2.compute.amazonaws.com:3000/calcular",
                 type: "get",
                 contentType: "application/json; charset=utf-8",
                 datatype: "json",
